<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Movies</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Movies</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_movie">Add a Movie</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview_qty">Quantity</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Movie name</string>

    <!-- Label for rating information in the editor [CHAR LIMIT=30] -->
    <string name="category_rating">Rating</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for movie name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_movie_name">Name</string>

    <!-- Text hint for movie description field in the editor [CHAR LIMIT=30] -->
    <string name="hint_movie_description">Description</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_movie_qty">Enter quantity</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_movie_sale">Sale quantity </string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_movie_price">Price</string>

    <!-- Units for movie price  [CHAR LIMIT=5] -->
    <string name="unit_movie_price">$</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="rating_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="rating_action">Action</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="rating_drama">Drama</string>

    <!--Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_movie_successful">Movie saved</string>

    <!--Toast message in editor when new movie failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_movie_failed">Movie saved</string>

    <!--Toast message in editor when new movie inserted [CHAR LIMIT=NONE] -->
    <string name="editor_activity_title_edit_movie">Edit Movie</string>

    <!--Toast message in editor when new movie failed to update [CHAR LIMIT=NONE] -->
    <string name="editor_update_movie_failed">Fail to update</string>

    <!--Toast message in editor when new movie updted succesuful [CHAR LIMIT=NONE] -->
    <string name="editor_update_movie_successful">Movie updated</string>

    <!--Toast message in editor for movie quantities [CHAR LIMIT=NONE] -->
    <string name="editor_movie_qty">Quantity </string>

    <!--Title text for the empty view , which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here ...</string>

    <!--Title text for the empty view , which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quiting changes?</string>

    <!--Title text for the empty view , which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="discard">Discard</string>

    <!--Title text for the empty view , which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="keep_editing">Keep editing</string>

    <!--subTitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Movie</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Movie deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting a movie</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Movie?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_description">Unknown rating</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="buy_button">Buy</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="order_more">Order More</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="order_more_button">Order More</string>

    <string name="thank_you">Thank you for your order!</string>

    <string name="listView_qty">Quantity :</string>

    <string name="listView_price">Price :</string>

    <string name="listView_desc">Description :</string>

    <string name="upload_picture_button">Select Image</string>

    <string name="final_picture_view">Show Picture</string>

    <string name="listView_buy_one">Buy 1</string>

</resources>